a bit messy with grunt and gh-pages test

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <button>Sources</button>
     <div class="source">
       <ul>
-        <li><a href="http://redd.it/1usqiw">Original source</a></li>
+        <li><a href="http://redd.it/1usqiw" target="_blank">Original source</a></li>
       </ul>
     </div>
   </article>
@@ -114,13 +114,13 @@
       <h4>1959 or 1962</h4>
     </hgroup>
     <figure>
-      <img src="/img/castro_guevara_playing_golf_1962.jpg"/>
+      <img src="img/castro_guevara_playing_golf_1962.jpg"/>
     </figure>
     <button>Sources</button>
     <div class="source">
       <ul>
-        <li><a href="http://redd.it/1uhc02">Original source</a></li>
-        <li><a href="http://edition.cnn.com/2010/SPORT/02/24/golf.fidel.castro.guevara.korda/">Explanations</a></li>
+        <li><a href="http://redd.it/1uhc02" target="_blank">Original source</a></li>
+        <li><a href="http://edition.cnn.com/2010/SPORT/02/24/golf.fidel.castro.guevara.korda/" target="_blank">Explanations</a></li>
       </ul>
     </div>
   </article>
@@ -238,12 +238,12 @@
       <h4>1942 / 1943</h4>
     </hgroup>
     <figure>
-      <img src="/img/boy_cincinnati,_ohio_1942_1943.jpg"/>
+      <img src="img/boy_cincinnati,_ohio_1942_1943.jpg"/>
     </figure>
     <button>Sources</button>
     <div class="source">
       <ul>
-        <li><a href="http://redd.it/1u8r11">Original source</a></li>
+        <li><a href="http://redd.it/1u8r11" target="_blank">Original source</a></li>
       </ul>
     </div>
   </article>
@@ -266,12 +266,12 @@
       <h4>1912</h4>
     </hgroup>
     <figure>
-      <img src="/img/eastern_islands_dec_1912.jpg"/>
+      <img src="img/eastern_islands_dec_1912.jpg"/>
     </figure>
     <button>Sources</button>
     <div class="source">
       <ul>
-        <li><a href="http://redd.it/2283vu">Original source</a></li>
+        <li><a href="http://redd.it/2283vu" target="_blank">Original source</a></li>
       </ul>
     </div>
   </article>
@@ -294,12 +294,12 @@
       <h4>1982</h4>
     </hgroup>
     <figure>
-      <img src="/img/mafia_murder_in_palermo_1982.jpg"/>
+      <img src="img/mafia_murder_in_palermo_1982.jpg"/>
     </figure>
     <button>Sources</button>
     <div class="source">
       <ul>
-        <li><a href="http://redd.it/2274hz">Original source</a></li>
+        <li><a href="http://redd.it/2274hz" target="_blank">Original source</a></li>
       </ul>
     </div>
   </article>
