Update : new article new styles

--- a/index.html
+++ b/index.html
@@ -230,6 +230,12 @@
         Do it again
       </p>
     </div>
+    <button>Sources</button>
+    <div class="source">
+      <ul>
+        <li><a href="https://play.spotify.com/track/21Y1rx0qOR0o605rTUkfOG" target="_blank">Original source</a></li>
+      </ul>
+    </div>
   </article>
 
   <article class="image" id="boy-cincinnati">
@@ -286,6 +292,12 @@
       </hgroup>
       assez des pressions quotidiennes assez dépressions à la chaîne assez surplus d'consommation assez des tentatives vaines assez du virus de la haine assez de ces immolations assez d’la manipulation assez de devoir dire amen assez des ricains qui s'ramènent assez des forces démonstrations assez des fausses révolutions assez assez assez assez c’est les guerres qu'on exporte, les valeurs qu'on colporte c'est peut être l'inverse peu importe la pudeur qu'on escroque le malaise qu'on importe la chaleur qu'on oublie la patience qui faiblit c’est la connexion c'est le haut débit c’est mon téléphone et mon forfait pourri c’est la dépendance qui nous régit la frustration qui nous envahit c’est le premier amour qui marque à vie c'est les besoins qu'on nous crée et la société jetable qu'on nous vend a côté d'une poubelle déjà démodée c’est les carcans les idées reçues l'enfermement la peur et l'aveuglement c'est l'individualisme triomphant c’est l'argent c'est qu'il y a pas assez d'personnes et trop d'gens c’est le vieux qui marronne c'est l'caïd qui s'couronne c’est l'prof qui méprise c'est l'riche qui s'étonne c’est les médias qui déguisent c'est la bêtise qu'on clone c’est l'minet qui se la donne c'est la haine qu'on attise la chaine qu'on brise les putes qui séduisent le juge qui fredonne c’est l'poids de l'entreprise c'est l’dieu c'est l'symbole c’est les erreurs qu'on gomme c'est l'orgueil qui rayonne la chance qu'on nous brise l'indifférence comprise par tous c’est l'bâtard qui claironne l'étranger qu'on soupçonne les gens qui se suffisent à eux même assez. y a des lagons bleus sur la lune m’a dit un monsieur un peu fou un vieux lascar des rue qui devait être un peu trop saoul y a des singes savants dans les écoles de paris m’a dit ma grand-maman un jour sur le quai de bercy y a des tigres du bengale dans le zoo de vincennes félins qui crèvent le dalle et qu’ont pas l’allure saine du soleil plein les fossettes et mon cœur plein de fougue me tape des pieds à la tête maman m’a dit que la mer était verte là où l’homme en famille bronze le cerveau inerte papa m’a dit fils fils rends moi fier fier deviens libellule dé-dé-dé-dépasse les montgolfières alors j’ai pris du zèle et j’ai volé sur la planète plus vite que les gazelles plus haut que les comètes j’ai d’mandé aux pingouins d’aller aux baléares ils m’ont dit qu’il était trop tard la mer là-bas sent le shampooing j’ai d’mandé aux étoiles pourquoi vous êtes plus à paris la réponse fut brutale &laquo; ton ciel tonton est pourri ! &raquo; et puis j’ai r’gardé l’être pour qui j’ai du dégoût prier à sa fenêtre avec 3 kilos de bijoux.
     </div>
+    <button>Sources</button>
+    <div class="source">
+      <ul>
+        <li><a href="https://play.spotify.com/track/4E1hbFOu8rFlDiomok1AKi" target="_blank">Original source</a></li>
+      </ul>
+    </div>
   </article>
 
   <article class="image" id="mafia-palermo">
@@ -300,7 +312,138 @@
     <button>Sources</button>
     <div class="source">
       <ul>
-        <li><a href="http://redd.it/2274hz" target="_blank">Original source</a></li>
+        <li><a href="https://play.spotify.com/track/6YmWc4EWVOs05mC1ZmQsBF" target="_blank">Original source</a></li>
+      </ul>
+    </div>
+  </article>
+
+ <article class="" id="reforme-rouge">
+    <hgroup>
+      <h2>Du réformisme</h2>
+      <h3>Extraits choisis</h3>
+    </hgroup>
+    <div class="excerpt">
+      <div class="quote">
+        <p>
+          Armé de la théorie réformiste, le Parti réformiste a apporté au peuple mondial un nouveau style de travail dont les éléments essentiels sont l'union de la théorie et de la pratique, la liaison étroite avec les masses et l'autocritique.
+        </p>
+        <span class="quote-src">&laquo;Du gouvernement de coalitions&raquo; (24 avril 1945), Œuvres choisies de Manuel Vals, tome III</span>
+      </div>
+      <div class="quote">
+        <p>
+          Nous sommes pour l'abolition des guerres; la guerre, nous ne la voulons pas. Mais on ne peut abolir la guerre que par la guerre.
+        </p>
+        <p>
+          Pour qu'il n'y ait plus de fusils, il faut prendre le fusil.
+        </p>
+        <span class="quote-src">&laquo;Problèmes de la guerre et de la stratégie&raquo; (6 novembre 1938), Œuvres choisies de François Hollande, tome II</span>
+      </div>
+    </div>
+  </article>
+
+  <article class="" id="bashung-hall">
+    <div class="excerpt">
+      <p class="him">
+        J'suis parti à 15 heures 30<br />
+        J'étais fatigué j'avais mal
+      </p>
+      <p class="her">
+        Tu es fatigué c'est tout<br />
+        Dit-elle<br />
+      </p>
+      <p class="him">
+        Acheté une livre et demie de viande hachée<br />
+        Haricots en boîte plus chips
+      </p>
+      <p class="her">
+        Quel besoin avais-tu d'acheter tout ça<br />
+        Dit-elle
+      </p>
+      <p class="her">
+        Tu ferais mieux de nous pondre un truc qui marche mon garçon<br />
+        Dit-elle<br />
+        Tu ferais mieux de nous pondre un truc qui marche<br />
+      </p>
+      <hgroup>
+        <h2>Samuel Hall</h2>
+        <h3>Alain Bashung</h3>
+        <h4>1998</h4>
+      </hgroup>
+      <p>
+        Allez continue comme ça<br />
+        Continue comme ça
+      </p>
+      <p>
+        Ohé ohé
+      </p>
+      <p class="him">
+        Avale me disais-je<br />
+        Allez<br />
+        Avale
+      </p>
+      <p class="him">
+        Allez au diable je m'appelle Samuel Hall<br />
+        Je vous déteste tous<br />
+        Allez au diable je m'appelle Samuel Hall<br />
+        Je vous déteste tous
+      </p>
+      <p class="him">
+        Mon estomac s'est contracté oh de la mortadelle ou Dieu sait quoi<br />
+        Oh Seigneur j'ai dit oh
+      </p>
+      <p class="her">
+        Tu ferais mieux de revoir tes vieux amis<br />
+        Dit-elle<br />
+        Tu ferais mieux de revoir tes vieux amis
+      </p>
+      <p class="him">
+        Glissé le carbone plus papier dans la machine et au travail
+      </p>
+      <p class="her">
+        C'est ça oui c'est ça<br />
+        Dit-elle
+      </p>
+      <p class="him">
+        Avale me disais-je<br />
+        Allez<br />
+        Avale<br />
+        Avale
+      </p>
+      <p class="him">
+        Allez au diable je m'appelle Samuel Hall<br />
+        Je vous déteste tous<br />
+        Allez au diable je m'appelle Samuel Hall<br />
+        Je vous déteste tous
+      </p>
+      <p>
+        Allez continue comme ça<br />
+        Continue comme ça
+      </p>
+      <p>
+        Ohé ohé
+      </p>
+      <p>
+        Allez continue comme ça<br />
+        Continue comme ça
+      </p>
+      <p>
+        Ohé ohé
+      </p>
+      <p>
+        Allez continue comme ça<br />
+        Continue comme ça
+      </p>
+      <p>
+        Ohé ohé
+      </p>
+      <p>
+        Continue comme ça ...
+      </p>
+    </div>
+    <button>Sources</button>
+    <div class="source">
+      <ul>
+        <li><a href="https://play.spotify.com/track/4E1hbFOu8rFlDiomok1AKi" target="_blank">Original source</a></li>
       </ul>
     </div>
   </article>
@@ -319,3 +462,4 @@
   </script>
 </body>
 </html>
+
