Update npm/js packages and https links, fix uncss sources list, 404 & clean docs

--- a/src/404.html
+++ b/src/404.html
@@ -4,22 +4,18 @@
     <meta charset="utf-8">
     <meta content="IE=edge;chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <title>NantesJS - Communauté Nantaise des 404 JavaScripts</title>
+    <title>Café Panique - 404</title>
 
-    <meta itemprop="name" content="NantesJS">
-    <meta itemprop="description" content="Communauté Nantaise des utilisateurs de JavaScript">
-
-    <meta name="google-site-verification" content="koBZ8ndrkapNRtTjHwJ9TXn8znnY9VN5ONrgmb44CTI">
-    <meta description="A website about the Nantes JavaScript User Group and their meetups">
+    <meta itemprop="name" content="Café Panique">
+    <meta itemprop="description" content="Café Panique">
 
     <link rel="author" href="/humans.txt">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/main.min.css">
-
-    <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 <body>
     <header>
-        <a href="/" title="NantesJS">
+        <a href="/" title="Café Panique">
             <h1 class="logo"><img class="phone" src="images/logotype.png"></h1>
         </a>
     </header>
